# AGRAFES

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_PREP.md  HANDOFF_SHELL.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bench-sidecar.yml  build-sidecar.yml  ci.yml  linux-manylinux-sidecar.yml  macos-sign-notarize.yml  macos-sign-shell.yml  release-gate.yml  release.yml  sidecar-growth-gate.yml  smoke.yml  tauri-e2e-fixture.yml  tauri-shell-build.yml  windows-sign-shell.yml  windows-sign.yml
artifacts/ui-audit/: audit-curation.md  divergences.json  matrix-index.json
audit/2026-03-15_sprint_i_unit_context/: AUDIT_CONTEXTE_DOCUMENTAIRE.md  RESUME_SPRINT_I.md
audit/curation/: PARITY_REPORT.md  _diff_table.md  _diff_table_after_inc1.md  diff_notes.md  diff_notes_after_inc1.md  diff_rows.json  diff_rows_after_inc1.json  mockup_after_inc1_metrics.json  mockup_metrics.json  post-inc1-check.md  post-inc1-metrics.json  post-inc2-check.md  runtime_after_inc1_metrics.json  runtime_after_inc2_1440_metrics.json  runtime_after_inc2_1728_metrics.json  runtime_metrics.json
audit/prep/: INDEX.md
bench/: README.md  run_bench.py  run_sidecar_bench.py
bench/fixtures/: segmentation_quality_cases.json  segmentation_quality_thresholds.json  sidecar_size_budget.json
corpus/machiavel/: README.md  il_principe_it.txt  le_prince_fr.txt  the_prince_en.txt
docker/manylinux/: Dockerfile
docs/: AUDIT_2026-03-26.md  AUDIT_2026-04-19.md  AUDIT_2026-06-12.md  AUDIT_2026-06-28.md  AUDIT_FOLLOW_UP.md  BACKLOG.md  BACKLOG_CQL.md  BACKLOG_FAMILLES.md  BACKLOG_PREP_AUDIT.md  BACKLOG_RECHERCHE_GRAMMATICALE.md  BACKLOG_ROLLBACK_CURATION.md  BENCHMARKS.md  BENCHMARKS_MISSING.md  CHANGELOG_ARCHIVE.md  CHARTER_AGENT_IDE_V1.md  CHARTER_TAURI_PREP_AGENT.md  CQL_INTEROP_FEASIBILITY.md  DECISIONS.md  DESIGN.md  DESIGN_ANALYSIS.md  DESIGN_R2_3_blob_two_grain.md  DESIGN_R3_3_bead_editor.md  DESIGN_R3_sentence_alignment.md  DESIGN_R4_1_unit_status.md  DESIGN_metadata_templates_filtering.md  DESIGN_peritext_conventions.md  DESIGN_peritext_conventions_grounding.md  DESIGN_prep_text_canvas.md  DESIGN_sharedocs_ingestion.md  DESIGN_spacy_model_download.md  DESIGN_spacy_models_dual_dist_and_selection.md  DISTRIBUTION.md  EXPORT_STAGE_MATRIX.md  FTS_PERFORMANCE_PROFILE.md  IMPORT_DOCX_ODT_UNICODE_QA.md  INCREMENTAL_INDEXING.md  INTEGRATION_TAURI.md  NORMALISATION_ESPACES_AUDIT.md  PREP_IMPLEMENTATION_PLAN.md  PREP_UI_REDESIGN_PLAN.md  (+38 more)
docs/cadrage/: CATEGORIES_GRAMMATICALES.md  CONVENTIONS_PROJET.md  DISTRIBUTION_TEMPORELLE.md  IMPORT_RATIO.md  METADONNEES_DOCUMENT.md  MODE_ANNOTATION.md  MULTIPLES_BASES.md
migrations/: 001_initial_schema.sql  002_fts5_index.sql  003_alignment.sql  004_align_link_status.sql  005_document_workflow_status.sql  006_curation_exceptions.sql  007_curation_apply_history.sql  008_alignment_links_unique.sql  009_corpus_info.sql  010_document_author_date.sql  011_source_changed.sql  012_tokens.sql  013_unit_roles.sql  014_unit_role_field.sql  015_text_start.sql  016_document_translator.sql  017_document_biblio.sql  018_unit_roles_category.sql  019_prep_action_history.sql  020_unit_text_source.sql  021_snapshot_text_source.sql  022_alignment_bead.sql  023_unit_status.sql
migrations/down/: 001_initial_schema_down.sql  002_fts5_index_down.sql  003_alignment_down.sql  004_align_link_status_down.sql  005_document_workflow_status_down.sql  (+7 more)
packaging/: PKG1_REPORT.md  PKG2_REPORT.md  PKG3A_WINDOWS_REPORT.md  WINDOWS_REBUILD_AFTER_PROXY_FIX.md
scripts/: aggregate_bench_results.py  analyze_undo_soak.py  audit_align_capture.mjs  audit_curate_diff.py  audit_curation_capture.mjs  audit_curation_matrix.mjs  audit_curation_report.py  audit_documents_capture.mjs  audit_export_capture.mjs  audit_hub_capture.mjs  audit_import_capture.mjs  audit_regression_capture.mjs  audit_seg_capture.mjs  bench_fts_profile.py  bench_segmentation_quality.py  bench_sidecar_startup.py  build_sidecar.py  build_tauri_shell_windows.ps1  bump_version.py  check_sidecar_size_budget.py  ci_smoke_sidecar.py  create_demo_db.py  db_diagnostics.py  diagnose_dollar_pollution.py  export_openapi.py  linux_manylinux_build_sidecar.sh  macos_sign_and_notarize_sidecar.sh  macos_sign_and_notarize_tauri_fixture.sh  read_manifest_field.py  release_gate.py  sidecar_entry.py  smoke_sidecar.py  validate_regex_migration.py  windows_sign_sidecar.ps1
shared/: sidecarCore.ts
tauri/: README.md
tauri-app/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-fixture/: README.md  package-lock.json  package.json
tauri-prep/: README.md  eslint-suppressions.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
tauri-shell/: eslint-suppressions.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-shell/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
tauri-shell/src-tauri/capabilities/: default.json
tauri-shell/src-tauri/src/: main.rs
tests/: README.md  __init__.py  conftest.py  support_odt.py  test_action_history.py  test_align_length_bounded.py  test_align_source_changed.py  test_alignment.py  test_analyze_undo_soak.py  test_bench_fts_profile.py  test_bench_sidecar_startup.py  test_build_hits_dedup.py  test_cli_contract.py  test_coarse_grain.py  test_contract_docs_sync.py  test_contract_openapi_snapshot.py  test_convention_roles.py  test_corpus_info.py  test_cql_parser.py  test_curation.py  test_db_diagnostics.py  test_docx_numbered_lines_tables.py  test_exporters.py  test_exporters_e2e.py  test_fts_staleness.py  test_gale_church.py  test_import.py  test_import_conllu.py  test_import_remote_batch.py  test_import_word_processing_unicode.py  test_indexer_incremental.py  test_metadata_validation.py  test_migrations.py  test_models_service.py  test_odt.py  test_output_contract_snapshots.py  test_portfile_acl.py  test_qa_policy.py  test_qa_report.py  test_query.py  (+45 more)
(+517 files in other folders)
