[package]
name = "agrafes-shell"
version = "0.2.8"
description = "AGRAFES Shell — unified Tauri V0 app (Prep + Concordancier)"
authors = ["AGRAFES"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "time"] }
dirs = "6"
# OS keychain for ShareDocs "remember credentials" (Phase 4A). `windows-native`
# enables the Windows Credential Manager backend (the shipped target); add
# `apple-native` / `sync-secret-service` when macOS/Linux builds are needed.
keyring = { version = "3", features = ["windows-native"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
